fix styling issues of list without images. now all aligned

--- a/src/components/SkillsCard/SkillsCard.scss
+++ b/src/components/SkillsCard/SkillsCard.scss
@@ -63,4 +63,9 @@
 
 .column {
     flex-direction: column;
+
+    & > ul {
+        justify-content: flex-start;
+        gap: 2rem;
+    }
 }
